Added "show options" button to expand optionally options when creating tasks. Added Fullscreen mode on F11 press.

--- a/PomodoroUI/PomodoroUI/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Index.cshtml
@@ -46,19 +46,20 @@
     <div id="task-history">
         @await Html.PartialAsync("Partials/_TaskHistory")
     </div>
-    <div class="mb-5" x-data="{ progressColor: null }">
+    <div class="mb-5" x-data="{ progressColor: '#d9d9d9' }" x-init="
+      progressColor = document.querySelector('input[name=timer-options]:checked').getAttribute('data-color')">
         <div class="d-flex justify-content-between">
             <div class="d-flex">
                 <div class="me-2">
-                    <input x-on:click="progressColor = null" type="radio" class="btn-check" name="timer-options" value="25" id="pomodoro" autocomplete="off" checked>
+                    <input x-on:click="progressColor = '#d9d9d9'" type="radio" class="btn-check" name="timer-options" value="25" id="pomodoro" autocomplete="off" data-color="#d9d9d9" checked>
                     <label class="btn btn-lg" for="pomodoro">Pomodoro</label>
                 </div>
                 <div class="me-2">
-                    <input x-on:click="progressColor = '#85daff'" type="radio" class="btn-check" name="timer-options" value="5" id="short-break" autocomplete="off">
+                    <input x-on:click="progressColor = '#85daff'" type="radio" class="btn-check" name="timer-options" value="5" id="short-break" autocomplete="off" data-color="#85daff">
                     <label class="btn btn-lg" for="short-break">Short Break</label>
                 </div>
                 <div class="me-2">
-                    <input x-on:click="progressColor = '#328cd1'" type="radio" class="btn-check" name="timer-options" value="15" id="long-break" autocomplete="off">
+                    <input x-on:click="progressColor = '#328cd1'" type="radio" class="btn-check" name="timer-options" value="15" id="long-break" autocomplete="off" data-color="#328cd1">
                     <label class="btn btn-lg" for="long-break">Long Break</label>
                 </div>
                 <div>
@@ -72,14 +73,15 @@
                 <a href="#" class="text-muted" data-bs-toggle="modal" data-bs-target="#study-task-history"><i class="bi bi-clock-history me-1"></i> History</a>
             </div>
         </div>
-            
+        
         <p id="timer" class="timer">
             00:00
         </p>
         <div class="progress">
-            <div class="progress-bar" :style="{ backgroundColor: progressColor }" id="progress-bar" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" :style="{ backgroundColor: progressColor }" id="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
+
 
     @await Html.PartialAsync("Partials/_AllStudyTasks")
 </div>
