--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
@@ -37,9 +37,17 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                         </ul>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Manage/Index">Manage</a>
+                            </li>
 
+                        </ul>
+                        <div class="d-none d-sm-block mt-1 h-100 mx-3">
+                            <div class="vr h-100"></div>
+                        </div>
                         <div class="dropdown">
-                            <i style="cursor: pointer" class="me-1" :class="theme == 'dark' ? 'bi bi-moon-stars' : 'bi bi-sun-fill'" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false"></i>
+                            <i style="cursor: pointer" :class="theme == 'dark' ? 'bi bi-moon-stars' : 'bi bi-sun-fill'" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false"></i>
                             <ul class="dropdown-menu" aria-labelledby="themeDropdown">
                                 <li><a class="dropdown-item" style="cursor: pointer" hx-post hx-swap="none" hx-page="Index" hx-page-handler="SetPreferredTheme" hx-route-theme="light" x-on:click="setTheme('light')"><i class="bi bi-sun-fill"></i> Light</a></li>
                                 <li><a class="dropdown-item" style="cursor: pointer" hx-post hx-swap="none" hx-page="Index" hx-page-handler="SetPreferredTheme" hx-route-theme="dark" x-on:click="setTheme('dark')"><i class="bi bi-moon-stars"></i> Dark</a></li>
