Began work on task management in Course page.

--- a/PomodoroUI/PomodoroUI/Pages/Timer/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Index.cshtml
@@ -51,7 +51,7 @@
         <div class="d-flex justify-content-between">
             <div class="d-flex">
                 <div class="me-2">
-                    <input x-on:click="progressColor = '#d9d9d9'" type="radio" class="btn-check" name="timer-options" value="25" id="pomodoro" autocomplete="off" data-color="#d9d9d9" checked>
+                    <input x-on:click="progressColor = '#328cd1'" type="radio" class="btn-check" name="timer-options" value="25" id="pomodoro" autocomplete="off" data-color="#328cd1" checked>
                     <label class="btn btn-lg" for="pomodoro">Pomodoro</label>
                 </div>
                 <div class="me-2">
@@ -59,7 +59,7 @@
                     <label class="btn btn-lg" for="short-break">Short Break</label>
                 </div>
                 <div class="me-2">
-                    <input x-on:click="progressColor = '#328cd1'" type="radio" class="btn-check" name="timer-options" value="15" id="long-break" autocomplete="off" data-color="#328cd1">
+                    <input x-on:click="progressColor = '#a77bc9'" type="radio" class="btn-check" name="timer-options" value="15" id="long-break" autocomplete="off" data-color="#a77bc9">
                     <label class="btn btn-lg" for="long-break">Long Break</label>
                 </div>
                 <div>
