--- a/PomodoroUI/PomodoroUI/Pages/Manage/Course.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Course.cshtml
@@ -5,10 +5,135 @@
     ViewData["Title"] = Model.Course.Name;
 }
 
-<h2>
-    @Model.Course.Name
-</h2>
-<p class="text-muted">@Model.Course.Description</p>
+<div class="modal fade" id="study-task-create-modal" tabindex="-1" aria-labelledby="taskModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header mb-3">
+                <h5 class="modal-title" id="taskModalLabel">Create a Task</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="mb-1 px-3">
+                <small>Add important tasks you want to complete during this session.</small>
+            </div>
+            <hr class="text-opacity-50 mb-0" />
+            <div>
+                <div>
+                    <form 
+                        x-data="{
+                          selectedLabels: [],
+                          toggleLabel(id) {
+                          if (this.selectedLabels.includes(id)) {
+                            this.selectedLabels=this.selectedLabels.filter(labelId => labelId !== id);
+                          } else {
+                            this.selectedLabels.push(id);
+                          }
+                        },
+                        clearSelectedLabels() {
+                          this.selectedLabels = [];
+                        },
+                          hideMoreOptions: true
+                        }"
+                        x-on:submit="hideMoreOptions = true"
+                        x-on:clear-labels.window="clearSelectedLabels()">
+                        <div class="modal-body">
+                            <div class="mb-2">
+                                <label asp-for="StudyTaskCreate.Name" class="form-label">Task:</label>
+                                <input class="form-control form-control-sm" asp-for="StudyTaskCreate.Name" />
+                                <span asp-validation-for="StudyTaskCreate.Name" class="text-danger form-text"></span>
+                            </div>
+                            <a x-show="hideMoreOptions" x-on:click="hideMoreOptions = false" class="text-muted" data-bs-toggle="collapse" href="#extra-options" role="button" aria-expanded="false" aria-controls="extra-options">
+                                <i class="bi bi-plus"></i> More options
+                            </a>
+                            <div class="collapse" :class="hideMoreOptions ? 'hide' : 'show'" id="extra-options">
+                                <div class="mb-2">
+                                    <label asp-for="StudyTaskCreate.TaskPriorityId" class="form-label">Priority:</label>
+                                    @foreach (var priority in Model.TaskPriorities)
+                                    {
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriorityId" value="@priority.Id" id="@(priority.Id)-create" />
+                                            <label class="form-check-label" for="@(priority.Id)-create">@priority.Level</label>
+                                        </div>
+                                    }
+                                    <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
+                                </div>
+                                <div class="mb-2">
+                                    <label asp-for="StudyTaskCreate.Deadline" class="form-label">Deadline:</label>
+                                    <input class="form-control form-control-sm" asp-for="StudyTaskCreate.Deadline" />
+                                    <span asp-validation-for="StudyTaskCreate.Deadline" class="text-danger form-text"></span>
+                                </div>
+                                <div class="mb-2">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="d-flex align-items-center">
+                                            <label asp-for="StudyTaskCreate.Name" class="form-label me-2 my-0">Labels:</label>
+                                            <div class="dropdown">
+                                                <a class="text-muted" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    Choose <i class="bi bi-chevron-expand"></i>
+                                                </a>
+                                                <ul class="dropdown-menu">
+                                                    <li class="dropdown-item">
+                                                        @*Create new label*@
+                                                        <a asp-page="../Labels/Index" class="text-opacity-75">
+                                                            Create New <i class="bi bi-plus"></i>
+                                                        </a>
+                                                    </li>
+                                                    @foreach (var label in Model.TaskLabels)
+                                                    {
+                                                        <li>
+                                                            <a class="dropdown-item" href="#"
+                                                               x-on:click.prevent.stop="toggleLabel(@label.Id)">
+                                                                <div class="d-flex justify-content-between align-items-center">
+                                                                    <span class="badge" style="background-color: @(label.HexColor)">@label.Name</span>
+                                                                    <i class="bi"
+                                                                       :class="selectedLabels.includes(@label.Id) ? 'bi-check' :''">
+                                                                    </i>
+                                                                </div>
+                                                            </a>
+                                                        </li>
+                                                    }
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="mt-2">
+                                        <template x-for="labelId in selectedLabels" :key="labelId">
+                                            <div>
+                                                @foreach (var label in Model.TaskLabels)
+                                                {
+                                                    <template x-if="labelId === @label.Id">
+                                                        <span class="badge me-1" style="background-color: @label.HexColor">@label.Name</span>
+                                                    </template>
+                                                }
+                                                @*For model binding.*@
+                                                <input type="hidden" name="StudyTaskCreate.TaskLabelIds" :value="labelId">
+                                            </div>
+                                        </template>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" id="submitButton" class="btn btn-primary">Add</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex justify-content-between align-items-end mb-3">
+    <div>
+        <h2>
+            @Model.Course.Name
+        </h2>
+        <p class="text-muted mb-0">@Model.Course.Description</p>
+    </div>
+    <button class="btn btn-primary">New Task</button>
+</div>
+
 
 <div class="row">
     <div class="col">
@@ -110,3 +235,8 @@
         </ul>
     </div>
 </div>
+
+@section Scripts {
+
+    <partial name="_ValidationScriptsPartial" />
+}
