--- a/PomodoroUI/PomodoroUI/Pages/Manage/Course.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Course.cshtml
@@ -15,7 +15,7 @@
             <div class="mb-1 px-3">
                 <small>Add important tasks you want to complete during this session.</small>
             </div>
-            <hr class="text-opacity-50 mb-0" />
+            <hr class="text-secondary mb-0" />
             <div>
                 <div>
                     <form 
