--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_TaskHistory.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_TaskHistory.cshtml
@@ -17,7 +17,7 @@
             <div class="mb-1 px-3">
                 <small>Archived tasks.</small>
             </div>
-            <hr class="text-opacity-50 mb-0" />
+            <hr class="text-secondary mb-0" />
             @if (Model.StudyTasks.Where(u => u.Archived).Count() == 0)
             {
                 <div class="modal-body">
