--- a/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
@@ -4,17 +4,58 @@
 @{
 }
 
-<style>
-    .card-hover {
-        transition: box-shadow 0.2s;
-    }
+<div class="modal fade" id="course-create-modal" tabindex="-1" aria-labelledby="courseModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header mb-3">
+                <h5 class="modal-title" id="courseModalLabel">Add a Course</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="mb-1 px-3">
+                <small>Fill in the fields below to start adding tasks to this course.</small>
+            </div>
+            <hr class="text-secondary mb-0" />
+            <form method="post">
+                <div class="modal-body" x-data="{ name: '', color: '#385091', isValid: true }">
+                    <div class="mb-3">
+                        <label asp-for="CourseCreate.Name" class="form-label"></label>
+                        <input x-model="name" asp-for="CourseCreate.Name" class="form-control form-control-sm" />
+                        <span asp-validation-for="CourseCreate.Name" class="text-danger form-text"></span>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="CourseCreate.Description" class="form-label"></label>
+                        <input asp-for="CourseCreate.Description" class="form-control form-control-sm" />
+                        <span asp-validation-for="CourseCreate.Description" class="text-danger form-text"></span>
+                    </div>
+                    <div class="mb-2">
+                        <label asp-for="CourseCreate.HexColor" class="form-label">Color</label>
+                        <div class="input-group input-group-sm">
+                            <button x-on:click="color = '#' + Math.floor(Math.random() * 16777215).toString(16).padStart(6, '0'); isValid = true" type="button" class="btn btn-secondary mb-3"><i class="bi bi-arrow-counterclockwise"></i></button>
+                            <input x-model="color" x-on:input="isValid = isValidHexColor(color)" type="text" id="user-color" class="form-control mb-3" placeholder="Enter a color (e.g., #ff5733)" asp-for="CourseCreate.HexColor">
+                        </div>
+                        <div x-show="!isValid" class="text-danger">Invalid color format. Please enter a valid hex color.</div>
+                        <span asp-validation-for="CourseCreate.HexColor" class="text-danger form-text"></span>
+                    </div>
+                    <div class="mb-3" x-show="name.trim() !== ''">
+                        <span>Preview:</span>
+                        <span class="badge" :style="'background-color: ' + color" x-text="name"></span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" id="submitButton" class="btn btn-primary">Add</button>
+                </div>
+            </form>
 
-        .card-hover:hover {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15), 0 6px 20px rgba(0, 0, 0, 0.1);
-        }
-</style>
+        </div>
+    </div>
+</div>
 
-<h5 class="mb-3">Courses</h5>
+<div class="d-flex justify-content-between align-items-end mb-3">
+    <h5 class="mb-0">Courses</h5>
+    <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-primary">Add Course</button>
+</div>
+
 @if (Model.Courses.Count == 0)
 {
     <p>No courses added.</p>
@@ -46,4 +87,10 @@ else
             </div>
         }
     </div>
+}
+
+
+@section Scripts {
+
+    <partial name="_ValidationScriptsPartial" />
 }
