--- a/PomodoroUI/PomodoroUI/Pages/Labels/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Labels/Index.cshtml
@@ -4,9 +4,9 @@
 @{
 }
 
-<div class="mb-2">
+@* <div class="mb-2">
     <a class="btn btn-secondary" asp-page="/Timer/Index"><i class="bi bi-arrow-return-left me-2 mt-1"></i>Back to Timer</a>
-</div>
+</div> *@
 
 <div class="d-flex justify-content-between align-items-end mb-3">
     <h5 class="my-0">Edit Labels</h5>
