--- a/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
@@ -53,7 +53,7 @@
 
 <div class="d-flex justify-content-between align-items-end mb-3">
     <h5 class="mb-0">Courses</h5>
-    <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-primary">Add Course</button>
+    <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-primary"><i class="bi bi-plus-lg"></i> Add Course</button>
 </div>
 
 @if (Model.Courses.Count == 0)
