--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Humanizer
+@using PomodoroLibrary.Models.Tables.StudyTaskEntities
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -49,7 +50,7 @@ else
                                         <span class="badge me-1" style="background-color: @(label.HexColor)">@label.Name</span>
                                     }
                                 </div>
-                                <small>Completed @task.DateCompleted.Humanize()</small>
+                                <small>@task.Status()</small>
                             </div>
                         </div>
                         <div class="d-flex align-items-center">
