--- a/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
@@ -1,4 +1,4 @@
-﻿@using Humanizer
+﻿@using PomodoroLibrary.Models.Tables.StudyTaskEntities;
 
 @model PomodoroUI.Pages.Timer.IndexModel
 
@@ -44,7 +44,7 @@ else
                                         <span class="badge me-1" style="background-color: @(label.HexColor)">@label.Name</span>
                                     }
                                 </div>
-                                <small>Created @task.DateCreated.Humanize()</small>
+                                <small>@task.Status()</small>
                             </div>
                         </div>
                         <div class="d-flex align-items-center">
