Modified button styles.

--- a/PomodoroUI/PomodoroUI/Pages/Manage/Courses/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Courses/Index.cshtml
@@ -172,14 +172,14 @@
                                     <div class="mb-2">
                                         <label asp-for="StudyTaskUpdate.TaskPriorityId" class="form-label">Priority:</label>
                                         <div class="form-check">
-                                            <input checked class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriorityId" value="" id="none-edit" />
-                                            <label class="form-check-label text-opacity-75" for="none-edit">None</label>
+                                            <input checked class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriorityId" value="" id="none-edit-@(task.Id)" />
+                                            <label class="form-check-label text-opacity-75" for="none-edit-@(task.Id)">None</label>
                                         </div>
                                         @foreach (var priority in Model.TaskPriorities)
                                         {
                                             <div class="form-check">
-                                                <input class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriorityId" value="@priority.Id" id="@(priority.Id)-edit" />
-                                                <label class="form-check-label" for="@(priority.Id)-edit">@priority.Level</label>
+                                                <input class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriorityId" value="@priority.Id" id="@(priority.Id)-edit-@(task.Id)" />
+                                                <label class="form-check-label" for="@(priority.Id)-edit-@(task.Id)">@priority.Level</label>
                                             </div>
                                         }
                                         <span asp-validation-for="StudyTaskUpdate.TaskPriorityId" class="text-danger form-text"></span>
