--- a/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
@@ -54,7 +54,7 @@
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
         <h5 class="mb-0">Courses</h5>
-        <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-primary"><i class="bi bi-plus-lg"></i> Add Course</button>
+        <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-secondary"><i class="bi bi-plus-lg"></i> Add Course</button>
     </div>
 
     @if (Model.Courses.Count == 0)
@@ -76,15 +76,15 @@
                                 </div>
 
                                 <div class="mt-3 d-flex align-items-center justify-content-between">
-                                    @if (course.Archived)
+@*                                     @if (course.Archived)
                                     {
-                                        <span class="badge bg-secondary">Archived</span>
+                                        <span class="badge bg-secondary text-dark">Archived</span>
                                     }
                                     else
                                     {
-                                        <span class="badge bg-success">Active</span>
+                                        <span class="badge bg-body-tertiary text-body">Active</span>
                                     }
-
+ *@
                                     <small class="text-muted">Incomplete Tasks: @(course.StudyTasks.Count(t => !t.Completed))</small>
                                 </div>
                             </div>
@@ -100,7 +100,7 @@
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
         <h5 class="mb-0">Tasks Due Next</h5>
-        <a class="btn btn-primary" asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a>
+        @* <a class="btn btn-primary" asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a> *@
     </div>
 
     @if (Model.StudyTasks.Count == 0)
