Moved badges to a tag helper.

--- a/PomodoroUI/PomodoroUI/Pages/Labels/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Labels/Index.cshtml
@@ -25,7 +25,7 @@
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="col-md-3">
-                            <span class="badge" style="background-color: @(Model.TaskLabels[i].HexColor)">@Model.TaskLabels[i].Name</span>
+                            <badge text="@Model.TaskLabels[i].Name" color="@Model.TaskLabels[i].HexColor"></badge>
                         </div>
                         <div class="d-none d-md-block col-md-4">
                             <span class="text-muted">@Model.TaskLabels[i].Description</span>
