--- a/PomodoroUI/PomodoroUI/Pages/Manage/Courses/Partials/_Tasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Courses/Partials/_Tasks.cshtml
@@ -43,11 +43,11 @@
                                             <h6 class="card-title mb-1 me-2">@task.Name</h6>
                                             @if (task.TaskPriority != null)
                                             {
-                                                <span class="badge me-1" style="background-color: @(task.TaskPriority.DisplayHexColor)">Priority: <span class="fw-normal">@task.TaskPriority.Level</span></span>
+                                                <badge priority="true" text="@task.TaskPriority.Level" color="@task.TaskPriority.DisplayHexColor"></badge>
                                             }
                                             @foreach (var label in task.TaskLabels)
                                             {
-                                                <span class="badge me-1" style="background-color: @(label.HexColor)">@label.Name</span>
+                                                <badge text="@label.Name" color="@label.HexColor"></badge>
                                             }
                                         </div>
                                         <small>@task.Status()</small>
@@ -95,11 +95,11 @@
                                         <h6 class="card-title mb-1 me-2">@task.Name</h6>
                                         @if (task.TaskPriority != null)
                                         {
-                                            <span class="badge me-1" style="background-color: @(task.TaskPriority.DisplayHexColor)">Priority: <span class="fw-normal">@task.TaskPriority.Level</span></span>
+                                            <badge priority="true" text="@task.TaskPriority.Level" color="@task.TaskPriority.DisplayHexColor"></badge>
                                         }
                                         @foreach (var label in task.TaskLabels)
                                         {
-                                            <span class="badge me-1" style="background-color: @(label.HexColor)">@label.Name</span>
+                                            <badge text="@label.Name" color="@label.HexColor"></badge>
                                         }
                                     </div>
                                     <small>@task.Status()</small>
