--- a/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
@@ -76,15 +76,6 @@
                                 </div>
 
                                 <div class="mt-3 d-flex align-items-center justify-content-between">
-@*                                     @if (course.Archived)
-                                    {
-                                        <span class="badge bg-secondary text-dark">Archived</span>
-                                    }
-                                    else
-                                    {
-                                        <span class="badge bg-body-tertiary text-body">Active</span>
-                                    }
- *@
                                     <small class="text-muted">Incomplete Tasks: @(course.StudyTasks.Count(t => !t.Completed))</small>
                                 </div>
                             </div>
@@ -138,10 +129,10 @@
                     <div class="row align-items-center">
                         <div class="d-flex align-items-center justify-content-between">
                             <div class="col-md-5">
-                                <span>@task.Name</span>
+                                <span class="me-1">@task.Name</span>
                                 @foreach(var label in task.TaskLabels)
                                 {
-                                    <span class="badge ms-1" style="background-color: @(label.HexColor)">@label.Name</span>
+                                    <badge text="@label.Name" color="@label.HexColor"></badge>
                                 }
                             </div>
                             <div class="d-none d-md-block col-md-4">
@@ -150,7 +141,7 @@
                             <div class="d-none d-lg-block col-md-1">
                                 @if (task.Course != null)
                                 {
-                                    <span class="badge" style="background-color: @(task.Course.HexColor)">@task.Course.Name</span>
+                                    <badge text="@task.Course.Name" color="@task.Course.HexColor"></badge>
                                 }
                             </div>
                             <div class="col-md-2 text-end text-nowrap">
